--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Skeleton server app",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "uuid": "^8.3.2"
   }
 }
